<resources>
    <string name="app_name">CUCUCLite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Thực đơn</string>
    <string name="img_content_description">no_image</string>
    <string name="button_register_lower">Đăng ký</string>
    <string name="button_login_lower">Đăng nhập</string>
    <string name="add_inventory_item">Thêm món</string>
    <string name="Save">Cất</string>
    <string name="inventory_item_name_hint">Nhập tên món</string>
    <string name="inventory_item_price">Giá bán</string>
    <string name="unit_hint_select">Chọn đơn vị tính</string>
    <string name="inventory_item_color">Màu sắc</string>
    <string name="inventory_item_icon">Biểu tượng</string>
    <string name="inventory_item_state">Trạng thái</string>
    <string name="inventory_item_inactive">Ngừng bán</string>
    <string name="delete_upper">XÓA</string>
    <string name="save_upper">CẤT</string>
    <string name="inventoryitem_name">Tên món</string>
    <string name="unit">Đơn vị tính</string>
    <string name="title_suggest_money">Gợi ý tiền mặt</string>
    <string name="button_cancel_1">Hủy bỏ</string>
    <string name="key0">0</string>
    <string name="key00">00</string>
    <string name="key000">000</string>
    <string name="key1">1</string>
    <string name="key10.000">10.000</string>
    <string name="key100.000">100.000</string>
    <string name="key2">2</string>
    <string name="key20.000">20.000</string>
    <string name="key200.000">200.000</string>
    <string name="key3">3</string>
    <string name="key4">4</string>
    <string name="key5">5</string>
    <string name="key50.000">50.000</string>
    <string name="key500.000">500.000</string>
    <string name="key6">6</string>
    <string name="key7">7</string>
    <string name="key8">8</string>
    <string name="key9">9</string>
    <string name="keyClear">C</string>
    <string name="str_minus">Giảm</string>
    <string name="str_plus">Tăng</string>
    <string name="text_required_format">"%s <font color='#ff0000'>*</font>"</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="btn_equal">=</string>
    <string name="btn_done">XONG</string>
    <string name="done">Xong</string>
    <string name="content_agree">Đồng ý</string>
    <string name="inactive">Ngừng bán</string>
    <string name="button_cancel">Cancel</string>
    <string name="asset_folder">icondefault</string>
</resources>
